setting up basic structure, just starting to style

--- a/index.html
+++ b/index.html
@@ -1,26 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework #2</title>
+  
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      font-size: 1em;
+      box-sizing: border-box;
+    }
 
-  <link rel="stylesheet" href="./assets/css/reset.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    header {
+        padding: 1rem 0;
+        justify-content: space-between;
+    }
+
+
+    .row {
+      display: flex;
+    }
+
+
+    .container {
+      width: 900px;
+      margin: 0 auto;
+      max-width: 100;
+    }
+  </style>
+
 </head>
 
 <body>
-  <header>
+  <header class="row">
     <h1>Akarin Jantachotivongs</h1>
     <nav>
       <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
+        <a href="#about">About Me</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact Me</a>
+        <a href="#">Resume</a>
       </ul>
     </nav>
   </header>
+  <div>
+    <p>Darth Maul</p>
+  </div>
+  <main>
+    <div class="container">
+
+      <div class="row">
+        <h2>About Me</h2>
+        <div>
+          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
+            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
+            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
+            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
+            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
+            would begin a plot to destroy the Jedi and conquer the galaxy in secret.</p>
+          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
+            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
+            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
+            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
+            years later.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <h2>Work</h2>
+        <div>
+
+          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
+            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
+            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
+            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
+            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
+            would begin a plot to destroy the Jedi and conquer the galaxy in secret</p>
+          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
+            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
+            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
+            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
+            years later.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <h2>Contact Me</h2>
+        <div>
+          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
+            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
+            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
+            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
+            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
+            would begin a plot to destroy the Jedi and conquer the galaxy in secret.</p>
+          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
+            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
+            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
+            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
+            years later.</p>
+        </div>
+      </div>
+  </main>
 </body>
 
 </html>
