setting basic layout, trying to add photos to background for styling

--- a/index.html
+++ b/index.html
@@ -5,49 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework #2</title>
-  
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-size: 1em;
-      box-sizing: border-box;
-    }
 
-    header {
-        padding: 1rem 0;
-        justify-content: space-between;
-    }
-
-
-    .row {
-      display: flex;
-    }
-
-
-    .container {
-      width: 900px;
-      margin: 0 auto;
-      max-width: 100;
-    }
-  </style>
-
-</head>
+  <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="stylesheet" href="./assets/photos" </head>
 
 <body>
   <header class="row">
     <h1>Akarin Jantachotivongs</h1>
-    <nav>
-      <ul>
-        <a href="#about">About Me</a>
-        <a href="#work">Work</a>
-        <a href="#contact">Contact Me</a>
-        <a href="#">Resume</a>
-      </ul>
-    </nav>
+    <nav id="headernav">
+
+      <a href="#about">About Me</a>
+      <a href="#work">Work</a>
+      <a href="#contact">Contact Me</a>
+      <a href="#">Resume</a>
+
+      </l#nav>
   </header>
-  <div>
-    <p>Darth Maul</p>
+  <div id=headerBackground class="row">
+    <p>Persistence prevails when all else fails</p>
   </div>
   <main>
     <div class="container">
@@ -55,17 +30,11 @@
       <div class="row">
         <h2>About Me</h2>
         <div>
-          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
-            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
-            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
-            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
-            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
-            would begin a plot to destroy the Jedi and conquer the galaxy in secret.</p>
-          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
-            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
-            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
-            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
-            years later.</p>
+          <p>I'm a Thai-American, happily married for 14 years. I have a 13 year old son, and 10 year old daughter. I've
+            been working in healthcare for 17 years as a pediatric medical assistant. </p>
+
+          <p>I've always been interested in the tech field, and with some encourage & blessings from the family, I've
+            decided to take the leap.</p>
         </div>
       </div>
 
@@ -73,34 +42,21 @@
         <h2>Work</h2>
         <div>
 
-          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
-            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
-            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
-            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
-            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
-            would begin a plot to destroy the Jedi and conquer the galaxy in secret</p>
-          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
-            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
-            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
-            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
-            years later.</p>
+          <p>SCH</p>
+
+          <p>BPC</p>
         </div>
       </div>
 
       <div class="row">
         <h2>Contact Me</h2>
         <div>
-          <p>Darth Bane was a legendary human male Dark Lord of the Sith and the sole survivor of the destruction of the
-            Brotherhood of Darkness at the hands of the Jedi Order during the Jedi-Sith War a thousand years before the
-            Clone Wars. As the only surviving Sith, Bane recognized that Sith infighting had weakened them to the point
-            that the Jedi could destroy them. To rectify this, Bane reformed the Sith and created the Rule of Two,
-            mandating that there could be only two Sith—a Master and an apprentice—at any given time. These new Sith
-            would begin a plot to destroy the Jedi and conquer the galaxy in secret.</p>
-          <p>The vendetta Bane held against the Jedi was fulfilled during the Clone Wars, when Supreme Chancellor Sheev
-            Palpatine, secretly the Sith Lord Darth Sidious and a follower of the Rule of Two, transformed the Galactic
-            Republic into the Galactic Empire and destroyed the Jedi Order. However, the victory was short-lived, as the
-            redeemed Jedi Knight Anakin Skywalker, formerly the Sith Lord Darth Vader, defeated the Sith twenty-three
-            years later.</p>
+
+          <a href="#comingSoon">Coming Soon</a>
+          <a href="#email">braxjanta@gmail.com</a>
+          <a href="#github">GitHub</a>
+          <a href="#">Twitter</a>
+
         </div>
       </div>
   </main>
