Still working on layout, currrently working on column

--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
 
       <div class="flex row">
         <h2 class=borderRight>Work</h2>
-          <div class="row">
+        <div class="row">
           <div class="container">
             <h2>Surf Report</h2>
-              <p>something</p>
-            </div>
+            <p>something</p>
+          </div>
+        </div>
+        <div class="flex-container column">
+          <div class="container">
+            <h2>LED Wall</h2>
+            <p>more stuff</p>
+          </div>
+          <div class="container">
+            <h2>Calculator</h2>
+            <p>more info</p>
+          </div>
+        </div>
+        <div class="flex-container">
+          <div class="container">
+            <h2>Pastel Puzzles</h2>
+
+            <h2>Run Buddy</h2>
+          </div>
+
+        </div>
       </div>
-              <div class="container flex row">  
-                <div class="container">
-                <h2>LED Wall</h2>
-                <p>more stuff</p>
-              </div>
-        <div class="container">      
-        <h2>Calculator</h2>
-        <p>more info</p>
+      <div class="flex row">
+        <h2 class=borderRight>Contact Me</h2>
+        <div>
+
+          <a href="#comingSoon">Coming Soon</a>
+          <a href="#email">braxjanta@gmail.com</a>
+          <a href="#github">GitHub</a>
+          <a href="#">Twitter</a>
+
+        </div>
       </div>
-      </div>
-      <div class="container">  
-
-        <h2>Pastel Puzzles</h2>
-
-        <h2>Run Buddy</h2>
-
-      
-    </div>
-  </div>
-    <div class="flex row">
-      <h2 class=borderRight>Contact Me</h2>
-      <div>
-
-        <a href="#comingSoon">Coming Soon</a>
-        <a href="#email">braxjanta@gmail.com</a>
-        <a href="#github">GitHub</a>
-        <a href="#">Twitter</a>
-
-      </div>
-    </div>
     </div>
   </main>
 </body>
