Still working on layout, now using flex wrap

--- a/index.html
+++ b/index.html
@@ -47,30 +47,39 @@
 
       <div class="flex row">
         <h2 class=borderRight>Work</h2>
-        <div class="row">
+        <div class="work">
           <div class="container">
             <h2>Surf Report</h2>
             <p>something</p>
           </div>
         </div>
-        <div class="flex-container column">
-          <div class="container">
-            <h2>LED Wall</h2>
-            <p>more stuff</p>
+
+        <div class="flex row container">
+          <div class="work2">
+            
+            <h2 class=borderLeft>LED Wall</h2>
+              <p>more stuff</p>
+            </div>
           </div>
-          <div class="container">
+          
+          <div>
             <h2>Calculator</h2>
+           <p>more info</p>
+          </div>
+        </div>
+
+        <div class="flex row container">
+          <div class="work3">
+              <h2 class=borderLeft>Pastel Puzzels</h2>
+              <p>more stuff</p>
+            </div>
+          </div>
+          <div>
+            <h2>Run Buddy</h2>
             <p>more info</p>
           </div>
         </div>
-        <div class="flex-container">
-          <div class="container">
-            <h2>Pastel Puzzles</h2>
 
-            <h2>Run Buddy</h2>
-          </div>
-
-        </div>
       </div>
       <div class="flex row">
         <h2 class=borderRight>Contact Me</h2>
