turning in for grading

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Homework #2</title>
 
   <link rel="stylesheet" href="./assets/style.css" />
-  <!-- <link rel="stylesheet" href="./assets/photos"  -->
+
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       </l#nav>
   </header>
   <div title="universeImage" id=headerBackground class="flex row">
-    <p>Persistence prevails when all else fails</p>
+    <p id="prevails">Persistence prevails when all else fails</p>
   </div>
   <main>
 
@@ -41,42 +41,42 @@
 
       <div class="flex-container">
 
-        <a href=# class="flex-item">
-          <div>
-            <h2 id="areaA">Surf Report</h2>
-            <h4 id="areaB">MERN Stack</h4>
+        <a id="work" href=# class="flex-item">
+          <div id="prevails">
+            <h2>Surf Report</h2>
+            <h4>MERN Stack</h4>
           </div>
         </a>
 
-        <a href=# class="flex-item">
-          <div>
-            <h2 id="areaA">LED Wall</h2>
-            <h4 id="areaB">Node/lot</h4>
+        <a id="led" href=# class="flex-item">
+          <div id="prevails">
+            <h2>LED Wall</h2>
+            <h4>Node/lot</h4>
           </div>
         </a>
 
-        <a href=# class="flex-item">
-          <div>
-            <h2 id="areaA">Calculator</h2>
-            <h4 id="areaB">React/JavaScript/CSS</h4>
+        <a id="cal" href=# class="flex-item">
+          <div id="prevails">
+            <h2>Calculator</h2>
+            <h4>React/JavaScript/CSS</h4>
           </div>
         </a>
 
-        <a href=# class="flex-item">
-          <div>
-            <h2 id="areaA">Pastel Puzzels</h2>
-            <h4 id="areaB">MERN Stack</h4>
+        <a id="puz" href=# class="flex-item">
+          <div id="prevails">
+            <h2>Pastel Puzzels</h2>
+            <h4>MERN Stack</h4>
 
           </div>
         </a>
 
-        <a href=# class="flex-item">
-          <div>
-            <h2 id="areaA">Run Buddy</h2>
-            <h4 id="areaB">HTML/CSS</h4>
+        <a id="run" href=# class="flex-item">
+          <div id="prevails">
+            <h2>Run Buddy</h2>
+            <h4>HTML/CSS</h4>
           </div>
         </a>
-        
+
       </div>
     </div>
 
